Fix <code> and <samp> in multi-line headings on iOS
Prevent the background colours of <code>'s and <samp>'s from overlapping
slightly in multi-line <h1>'s and <h2>'s on iOS Safari.

--- a/site/oatcake.css
+++ b/site/oatcake.css
@@ -557,7 +557,7 @@ h1 code,
 h2 code,
 h1 samp,
 h2 samp {
-  font-size: .8em;
+  font-size: .75em;
 }
 
 /* I've no idea why but when I reduce the font-size of `<mark>`'s within
